--- a/index.ipynb
+++ b/index.ipynb
@@ -71,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import None\n",
+    "import sqlite3\n",
     "\n",
-    "conn = None\n",
+    "conn = sqlite3.connect(\"dogs.db\")\n",
     "\n",
-    "c = None"
+    "c = conn.cursor()"
    ]
   },
   {
@@ -104,12 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_all_female_dogs_name_and_breed = None\n",
-    "\n",
+    "select_all_female_dogs_name_and_breed = c.execute('''SELECT name, breed \n",
+    "                                                     FROM dogs \n",
+    "                                                     WHERE gender = 'F';''').fetchall()\n",
+    "select_all_female_dogs_name_and_breed\n",
     "\n",
     "# Expected Output:\n",
     "# [('Little Ann', 'coonhound'),\n",
@@ -127,12 +143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('Clifford',),\n",
+       " ('Lassie',),\n",
+       " ('Little Ann',),\n",
+       " ('McGruff',),\n",
+       " ('Pickles',),\n",
+       " ('Scooby',),\n",
+       " ('Snoopy',),\n",
+       " ('Snowy',)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_all_dogs_names_in_alphabetical_order = None\n",
-    "\n",
+    "select_all_dogs_names_in_alphabetical_order = c.execute('''SELECT name FROM dogs ORDER BY name ASC;''').fetchall()\n",
+    "select_all_dogs_names_in_alphabetical_order\n",
     "\n",
     "# Expected Output:\n",
     "# [(None,),\n",
@@ -155,11 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_nameless_dog = None\n",
+    "select_nameless_dog = c.execute('''SELECT * FROM dogs WHERE name IS NULL;''').fetchall()\n",
+    "select_nameless_dog\n",
     "\n",
     "# Expected Output:\n",
     "# [(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
@@ -174,11 +221,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 'beagle'),\n",
+       " ('Clifford', 'big red'),\n",
+       " (None, 'golden retriever'),\n",
+       " ('Little Ann', 'coonhound'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier'),\n",
+       " ('McGruff', 'bloodhound'),\n",
+       " ('Pickles', 'black lab')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = None\n",
+    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''SELECT name, breed\n",
+    "                                                                               FROM dogs\n",
+    "                                                                               ORDER BY age ASC;''').fetchall()\n",
+    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest\n",
     "\n",
     "# Expected Output:\n",
     "# [('Snoopy', 'beagle'),\n",
@@ -198,11 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pickles', 13)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_name_and_age_of_oldest_dog = None\n",
+    "select_name_and_age_of_oldest_dog = c.execute('''SELECT name, age FROM dogs ORDER BY age DESC LIMIT 1;''').fetchall()\n",
+    "select_name_and_age_of_oldest_dog\n",
     "\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
@@ -217,11 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 3), ('Clifford', 4), (None, 4)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_name_and_age_of_three_youngest_dogs = None\n",
+    "select_name_and_age_of_three_youngest_dogs = c.execute('''SELECT name, age FROM dogs ORDER BY age LIMIT 3;''').fetchall()\n",
+    "select_name_and_age_of_three_youngest_dogs\n",
     "\n",
     "# Expected Output:\n",
     "# [('Snoopy', 3), ('Clifford', 4), (None, 4)]"
@@ -236,11 +329,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'bloodhound'),\n",
+       " ('Snowy', 'fox terrier'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Little Ann', 'coonhound')]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = None\n",
+    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.execute('''SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10 ORDER BY age DESC;''').fetchall()\n",
+    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest\n",
+    "\n",
     "\n",
     "# Expected Output: \n",
     "# [('McGruff', 'bloodhound'),\n",
@@ -259,11 +369,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"WHERE\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-a70c455a76ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m                                                                                                   \u001b[0mFROM\u001b[0m \u001b[0mdogs\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0mage\u001b[0m \u001b[0mBETWEEN\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0mAND\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                                                                   \u001b[0mGROUP\u001b[0m \u001b[0mBY\u001b[0m \u001b[0mhungry\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0mhungry\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                                                                                   ORDER BY name;''').fetchall()\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mselect_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"WHERE\": syntax error"
+     ]
+    }
+   ],
    "source": [
-    "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = None\n",
+    "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = c.execute('''SELECT name, age, hungry \n",
+    "                                                                                                  FROM dogs WHERE age BETWEEN 2 AND 7\n",
+    "                                                                                                  GROUP BY hungry WHERE hungry = 1 \n",
+    "                                                                                                  ORDER BY name;''').fetchall()\n",
+    "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order\n",
     "\n",
     "# Expected Output:\n",
     "# [(None, 4, 1),\n",
@@ -304,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
